--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,24 +15,23 @@
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
-    "expo-image-picker": "~9.1.0",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12"
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0"
   },
   "devDependencies": {
-    "@types/react": "~16.9.35",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "react-native-web": "~0.13.7",
-    "typescript": "~3.9.5"
+    "react-native-web": "^0.14.2",
+    "typescript": "^4.0.3"
   },
   "private": true
 }
