--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~8.3.0",
     "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
+    "lottie-react-native": "^3.5.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
